--- a/angular.json
+++ b/angular.json
@@ -26,13 +26,19 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/assets"
+                {
+                  "glob": "**/*",
+                  "input": "src/assets",
+                  "output": "assets"
+                },
+                {
+                  "glob": "manifest.json",
+                  "input": "src/",
+                  "output": "/"
+                }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/pink-bluegrey.css",
               "./node_modules/leaflet/dist/leaflet.css",
-              "./node_modules/leaflet.markercluster/dist/MarkerCluster.css",
-              "./node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
               "src/assets/css/_index.scss"
             ],
             "scripts": []
