--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/leaflet": "^1.9.8",
     "leaflet": "^1.9.4",
+    "leaflet-rotate-map": "^0.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
